--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </ul>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">важная информация</a>
+                            <a href="information.html" class="header__link">важная информация</a>
                         </li>
                         <li class="header__line">
                             <a href="#" class="header__link">морги в минске</a>
