--- a/information.html
+++ b/information.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Доставка и оплата</title>
+    <title>Важная информация</title>
 </head>
 <body>
     <div class="wrapper">
@@ -104,7 +104,7 @@
 
             <!-- шапка -->
             <div class="heder-page heder-page_margin">
-                <h1 class="heder-page__title">Доставка и оплата</h1>
+                <h1 class="heder-page__title">Важная информация</h1>
                 <div class="heder-page__img">
                     <picture>
                         <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
@@ -115,30 +115,70 @@
                 </div>
             </div>
 
-            <!-- title: -->
-            <div class="text-title container">
-                <div class="text-title_margin">Способы оплаты</div>
+
+            <div class="info container_1240">
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/1.webp" type="image/webp">
+                            <img src="img/__information/1.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">Место на кладбище</div>
+                </a>
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/2.webp" type="image/webp">
+                            <img src="img/__information/2.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">КОЛУМБАРИИ</div>
+                </a>
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/3.webp" type="image/webp">
+                            <img src="img/__information/3.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">КРЕМАТОРИЙ В МИНСКЕ</div>
+                </a>
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/4.webp" type="image/webp">
+                            <img src="img/__information/4.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">КЛАДБИЩА МИНСКА</div>
+                </a>
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/5.webp" type="image/webp">
+                            <img src="img/__information/5.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">пособие на погребение</div>
+                </a>
+                <!-- блок для инфо -->
+                <a class="info__box" href="#">
+                    <div class="info__img">
+                        <picture >
+                            <source srcset="img/__information/6.webp" type="image/webp">
+                            <img src="img/__information/6.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="info__title">ЧТО ДЕЛАТЬ, ЕСЛИ УМЕР БЛИЗКИЙ ЧЕЛОВЕК</div>
+                </a>
             </div>
 
-            <!-- текст: -->
-            <div class="text-page container">
-                <div class="text-page_margin">Оплата производится непосредственно при получении курьеру, наличными.</div>
-            </div>
-
-            <!-- title: -->
-            <div class="text-title container">
-                <div class="text-title_margin">Условия доставки</div>
-            </div>
-
-            <!-- текст: -->
-            <div class="text-page container">
-                <div class="text-page_margin">
-                    <p>Доставка по городу Минску осуществляется к подъезду c 08:00 до 20:00 без выходных.</p>
-                    <p>Стоимость доставки по Минску  7 р.</p>
-                    <p>Стоимость доставки за пределами МКАД  7р.+ 50 копеек за км.</p>
-                    <p>При заказе на сумму более 150 р. — доставка бесплатно.</p>
-                </div>
-            </div>
         <!-- конец блок магазина -->
         </main>
 
