--- a/shop-clothes.html
+++ b/shop-clothes.html
@@ -115,6 +115,301 @@
                 </div>
             </div>
 
+            <!-- блок с товарами -->
+            <div class="shop-block"> 
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Блузон женский с юбкой синий</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/1.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/1.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">55 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Блузон женский с юбкой синий</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/2.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/2.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">55 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Костюм женский</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/3.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/3.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">53 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Нижнее белье женское</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/4.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/4.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">23 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Косынка траурная женская</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/5.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/5.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">5 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Костюм мужской ритуальный</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/6.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/6.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">46 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Рубашка мужская белая</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/7.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/7.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">22 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Бельё мужское</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/8.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/8.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">19 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Кепи мужское</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/9.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/9.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">9 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Туфли мужские</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/10.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/10.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">37 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Туфли мужские</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/11.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/11.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">37 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Обувь женская</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/12.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/12.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Туфли мужские</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/13.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/13.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item  flex-crosses">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Обувь женская</div>
+                            <div class="card__img  card__img_height-crosses">
+                                <picture>
+                                    <source srcset="img/__shop-clothes/14.webp" type="image/webp">
+                                    <img src="img/__shop-clothes/14.jpg" alt="одежда для погребения">
+                                </picture>
+                            </div>
+                            <div class="card__prais">35 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Для похорон подходит не любая одежда. Важно, чтобы она подходила человеку, подчеркивала его статус, особенности. Но и это не все — существует много критериев, по которым выбирают погребальную одежду.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Какую одежду выбирают для мужчин?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Военнослужащих чаще всего облачают в парадный мундир, а гражданских — в костюм и рубашку светлых тонов. По христианским канонам категорически запрещено использовать ремень и галстук. Подбор цветовой гаммы зависит от возраста усопшего. Например, для мужчин пожилого возраста подходит костюм синего или черного цвета, а для молодых приобретают одежду светлых тонов.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Необходимые элементы для погребения мужчин:</div>
+            </div>
+
+            <!-- UL-LI: -->
+            <div class="text-page container">
+                <div class="text-page_margin">
+                    <ul class="text__list">
+                        <li class="text__line">Нижнее белье;</li>
+                        <li class="text__line">Рубашка;</li>
+                        <li class="text__line">Носки;</li>
+                        <li class="text__line">Брюки;</li> 
+                        <li class="text__line">Пиджак;</li> 
+                        <li class="text__line">Туфли.</li>         
+                    </ul>
+                </div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Обувь обязательно должна быть с запасом, так как ноги усопшего могут опухать. Не рекомендуется использовать модели со шнурками. Лучше выбирать изделия из эластичных материалов. Также существует специальная обувь именно для похорон, приобрести которую можно у нас.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">В чем хоронят женщин ?</div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">Погребальная одежда для женщин может быть любой – платье, костюм. Чаще всего это модели закрытого кроя с длинной юбкой или брюками. Лучше всего отдать предпочтение изделиям с простым кроем. Это может быть хлопковая рубашка, брючный костюм и т.п. Голова усопшей покрывается шарфом или платком. Что касается цветовой гаммы одежды для погребения для женщин — это белые, персиковые, бирюзовые цвета. Для пожилых дам часто выбирают темные оттенки одежды. Обувь для погребения женщин также приобретают простых моделей, без каблука. Она должны быть удобной и немного свободной, так как зачастую у умерший сильно опухают ноги. В подвенечном платье хоронят молодых незамужних девушек. Считается, что ее участь — стать невестой божьей. Опять же, платье должно быть простого кроя, с закрытыми плечами, руками. В любом случае, это лишь рекомендации по выбору ритуальной одежды. Родственники вправе сами выбирать вариант, который больше всего подойдет умершему. Только нужно учитывать, что тело может увеличиваться и наряды лучше выбирать свободные, а яркие принты, цвета недопустимы для погребения. Погребальная одежда должна быть сдержанной, опрятной и спокойных тонов.</div>
+            </div>
+
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Где купить в Минске одежду для погребения недорого </div>
+            </div>
+
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">У нас в наличии большой выбор одежды для погребения для женщин и мужчин. Мы чтим все каноны, поэтому рекомендуем использовать для этого специальные наряды, цена которых невысокая и доступна каждому. Конечно, можно подобрать вариант из гардероба усопшего, но ведь хочется проводить человека в последний путь достойно. Наши специалисты помогут подобрать оптимальный вариант, как по цветовой гамме, так и по размеру. Удобный онлайн-каталог позволит выбрать погребальную одежду всего за пару минут и сэкономит ваше время на подготовку к ритуалу. Кроме того, при заключении договора на приобретение ритуальных товаров для похорон у нас, вы получаете скидку в размере 10-15 %.</div>
+            </div>
+
+
+
+
+
+
+
+
+
 
 
 
