--- a/information.html
+++ b/information.html
@@ -115,10 +115,9 @@
                 </div>
             </div>
 
-
             <div class="info container_1240">
                 <!-- блок для инфо -->
-                <a class="info__box" href="#">
+                <a class="info__box" href="place-cemetery.html">
                     <div class="info__img">
                         <picture >
                             <source srcset="img/__information/1.webp" type="image/webp">
@@ -128,7 +127,7 @@
                     <div class="info__title">Место на кладбище</div>
                 </a>
                 <!-- блок для инфо -->
-                <a class="info__box" href="#">
+                <a class="info__box" href="COLUMBARIA.html">
                     <div class="info__img">
                         <picture >
                             <source srcset="img/__information/2.webp" type="image/webp">
