--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <span class="box-text-3__span-3"></span>
             </div>
             <!-- мулти блок -->
-            <div class="age-17">
+            <div class="age-17" id="age17">
 
                 <div class="age-17__item-1">
                     <div class="age-17__img-1">
@@ -196,7 +196,7 @@
                             <img src="img/home/item-1.jpg" alt="my_alt">
                         </picture>
                     </div>
-                        <div class="age-17__title-1">17+</div>
+                        <div class="age-17__title-1" id="age" data-time="2000" data-start="0" data-end="17">17+</div>
                         <div class="age-17__sub-title-1">лет опыта работы</div>
                 </div>
 
@@ -220,11 +220,11 @@
                     <div class="age-17__box-2040">
                         <div class="age-17__left">
                             <div class="age-17__2040">
-                                <div class="age-17__2040-title">2 040+</div>
+                                <div class="age-17__2040-title" id="burial" data-time="3000" data-start="0" data-end="2040">2 040+</div>
                                 <div class="age-17__2040-text">число захоронений</div>
                             </div>
                             <div class="age-17__1420">
-                                <div class="age-17__1420-title">1 420+</div>
+                                <div class="age-17__1420-title" id="cremation" data-time="3000" data-start="0" data-end="1420">1 420+</div>
                                 <div class="age-17__1420-text">число кремаций</div>
                             </div>
                             <div class="age-17__none-17">
