--- a/crematorium-minsk.html
+++ b/crematorium-minsk.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Важная информация</title>
+    <title>КРЕМАТОРИЙ В МИНСКЕ</title>
 </head>
 <body>
     <div class="wrapper">
@@ -104,7 +104,7 @@
 
             <!-- шапка -->
             <div class="heder-page heder-page_margin">
-                <h1 class="heder-page__title">Важная информация</h1>
+                <h1 class="heder-page__title">КРЕМАТОРИЙ В МИНСКЕ</h1>
                 <div class="heder-page__img">
                     <picture>
                         <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
@@ -115,68 +115,89 @@
                 </div>
             </div>
 
-            <div class="info container_1240">
-                <!-- блок для инфо -->
-                <a class="info__box" href="place-cemetery.html">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/1.webp" type="image/webp">
-                            <img src="img/__information/1.jpg" alt="my_alt">
+            <div class="block">
+                <!-- текст: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">В последнее время набирает популярность крематорий, так как такой способ захоронений имеет ряд преимуществ:</div>
+                </div>
+                <!-- UL-LI: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">
+                        <ul class="text__list">
+                            <li class="text__line">Доступная цена. Ниже, чем при традиционном захоронении;</li>
+                            <li class="text__line">Удобное хранение и транспортировка праха;</li>
+                            <li class="text__line">Экологичность.</li>           
+                        </ul>
+                    </div>
+                </div>
+                <!-- текст: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">Крематорий — сооружение, в котором находятся специальные печи. Служат они для сжигания умершего в гробу. К такой услуге прибегают все чаще. Это позволяет проще перевозить тело, снижает затраты на погребение.</div>
+                </div>
+                <!-- IMG: -->
+                <div class="text-img container">
+                    <picture>
+                        <source srcset="img/__crematorium-minsk/1-500.webp" type="image/webp" media="(max-width: 750px)">
+                        <source srcset="img/__crematorium-minsk/1-500.jpg" type="image/jpeg" media="(max-width: 750px)">
+                        <source srcset="img/__crematorium-minsk/1.webp" type="image/webp">
+                        <img src="img/__crematorium-minsk/1.jpg" alt="кремация">
+                    </picture>
+                </div>
+                <!-- текст: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">Крематорий появился на Северном кладбище в Минске 35 лет назад. Он имеет 3 ритуальных зала, а рядом имеется колумбарий. Стоимость кремации усопшего невысокая. Цена начинается от 141, 71 рубля. В нее не включена церемония прощания. Оплачивается она дополнительно. Если же нужен дополнительный сервис, то цена, соответственно будет выше. Хранение тела в крематории возможно 5 суток. По истечении этого времени потребуется вносить оплату. Для прощания и отпевания есть траурный зал. Он выглядит презентабельно и красиво. В нем созданы все условия для проведения красивой церемонии. Выдача урн происходит ежедневно, кроме выходных.</div>
+                </div>
+                <!-- title: -->
+                <div class="text-title container">
+                    <div class="text-title_margin">Как происходит выдача праха?</div>
+                </div>
+                <!-- текст: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">Он выдается в урне с соответствующей маркировкой после документального подтверждения о месте захоронения. Важно, в РБ прах развеивать запрещено. Урна должны быть захоронена или размещена в колумбарии. Родственники иногда хотят захоронить урну в другом городе или заграницей, тогда обязательно указывается место, страна, город и другая информация. Сотрудники крематория на основании этих данных выдают документ, подтверждающий, что отсутствуют сторонние вложения в урне. Это необходимо для транспортировки.</div>
+                </div>
+                <!-- IMG: -->
+                <div class="text-img container">
+                    <picture>
+                        <source srcset="img/__crematorium-minsk/2-500.webp" type="image/webp" media="(max-width: 750px)">
+                        <source srcset="img/__crematorium-minsk/2-500.jpg" type="image/jpeg" media="(max-width: 750px)">
+                        <source srcset="img/__crematorium-minsk/2.webp" type="image/webp">
+                        <img src="img/__crematorium-minsk/2.jpg" alt="кремация">
+                    </picture>
+                </div>
+                <!-- title: -->
+                <div class="text-title container">
+                    <div class="text-title_margin">Куда обратиться для проведения кремации в Минске?</div>
+                </div>
+                <!-- текст: -->
+                <div class="text-page container">
+                    <div class="text-page_margin">Наша ритуальная компания возьмет на себя организацию и проведение кремации в Минске по доступной цене. Мы помогает доставить тело в Минск из любого города. Работаем круглосуточно и знаем все детали обряда кремации, поэтому вам не придется ни о чем думать. Доверьтесь нашим специалистам и погребение вашего родного человека будет выполнено по всем канонам и правилам.</div>
+                </div>
+                <!-- блок с телефонами -->
+                <div class="tel-contacts">
+                    <div class="tel-contacts__a1">
+                    <div class="tel-contacts__a1-img">
+                        <picture class="tel-contacts__picture">
+                            <source srcset="img/__ritual-agent/4.webp" type="image/webp">
+                            <img src="img/__ritual-agent/4.jpg" alt="alt">
                         </picture>
                     </div>
-                    <div class="info__title">Место на кладбище</div>
-                </a>
-                <!-- блок для инфо -->
-                <a class="info__box" href="COLUMBARIA.html">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/2.webp" type="image/webp">
-                            <img src="img/__information/2.jpg" alt="my_alt">
+                    <a href="tel:+375447190599" class="tel-contacts__a1-tel">+375 (44) 719 05 99</a>
+                    </div>
+                    <div class="tel-contacts__mts">
+                    <div class="tel-contacts__mts-img">
+                        <picture class="tel-contacts__picture">
+                            <source srcset="img/__ritual-agent/5.webp" type="image/webp">
+                            <img src="img/__ritual-agent/5.jpg" alt="alt">
                         </picture>
                     </div>
-                    <div class="info__title">КОЛУМБАРИИ</div>
-                </a>
-                <!-- блок для инфо -->
-                <a class="info__box" href="crematorium-minsk.html">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/3.webp" type="image/webp">
-                            <img src="img/__information/3.jpg" alt="my_alt">
-                        </picture>
+                    <a href="tel:+375295057052" class="tel-contacts__mts-tel">+375 (29) 505 70 52</a>
                     </div>
-                    <div class="info__title">КРЕМАТОРИЙ В МИНСКЕ</div>
-                </a>
-                <!-- блок для инфо -->
-                <a class="info__box" href="cemetery-minsk.html">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/4.webp" type="image/webp">
-                            <img src="img/__information/4.jpg" alt="my_alt">
-                        </picture>
-                    </div>
-                    <div class="info__title">КЛАДБИЩА МИНСКА</div>
-                </a>
-                <!-- блок для инфо -->
-                <a class="info__box" href="#">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/5.webp" type="image/webp">
-                            <img src="img/__information/5.jpg" alt="my_alt">
-                        </picture>
-                    </div>
-                    <div class="info__title">пособие на погребение</div>
-                </a>
-                <!-- блок для инфо -->
-                <a class="info__box" href="#">
-                    <div class="info__img">
-                        <picture >
-                            <source srcset="img/__information/6.webp" type="image/webp">
-                            <img src="img/__information/6.jpg" alt="my_alt">
-                        </picture>
-                    </div>
-                    <div class="info__title">ЧТО ДЕЛАТЬ, ЕСЛИ УМЕР БЛИЗКИЙ ЧЕЛОВЕК</div>
-                </a>
+                    <div class="tel-contacts__clock">круглосуточно</div>
+                </div>
+
             </div>
+
+
 
         <!-- конец блок магазина -->
         </main>
