--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <div class="age-17__1420-text">число кремаций</div>
                             </div>
                             <div class="age-17__none-17">
-                                <div class="age-17__none-title">17+</div>
+                                <div class="age-17__none-title" id="age1" data-time="2000" data-start="0" data-end="17">17+</div>
                                 <div class="age-17__none-text">лет опыта работы</div>
                             </div>
                         </div>
