--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="age-17__title-3">Кратко о Нас</div>
                     <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2003 ГОДА.</div>
                     <div class="age-17__line"></div>
-                    <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошт и консультация по вопросам кремации и захоронения.</div>
+                    <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошь и консультация по вопросам кремации и захоронения.</div>
                     
                     <div class="age-17__box-2040">
                         <div class="age-17__left">
