--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                             <a href="information.html" class="header__link">важная информация</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">морги в минске</a>
+                            <a href="morgues-in-minsk.html" class="header__link">морги в минске</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">отзывы</a>
+                            <a href="reviews.html" class="header__link">отзывы</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">контакты</a>
+                            <a href="contacts.html" class="header__link">контакты</a>
                         </li>
                     </ul> 
                 </nav>
