--- a/#blocks.html
+++ b/#blocks.html
@@ -80,3 +80,18 @@
                     </div>
                 </div>
             </div>
+
+<!--= Отзывы -->
+        <!-- отзыв -->
+        <div class="reviews">
+            <div class="reviews__box">
+                <div class="reviews__quotes">
+                    <img src="img/quotes.svg" alt="ковычки">
+                </div>
+                <div class="reviews__text"></div>
+                <div class="reviews__name"></div>
+                <div class="reviews__stars">
+                    <img src="img/stars.png" alt="звезды">
+                </div>
+            </div>
+        </div>
