--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Захоронение</title>
+    <title>Главная</title>
 </head>
 <body>
     <div class="wrapper">
@@ -335,6 +335,8 @@
 
     
         </main>
+
+
 
         <!--= footer -->
         <footer class="footer">
