--- a/contacts.html
+++ b/contacts.html
@@ -115,11 +115,12 @@
 
         <div class="contacts">
             <div class="contacts__info">
-                <div class="contacts__title"></div>
-                <div class="contacts__text"></div>
-                <div class="contacts__tel"></div>
-                <div class="contacts__map"></div>
-                <div class="contacts__mail"></div>
+                <div class="contacts__title">СВЯЖИТЕСЬ С НАМИ, ЧТОБЫ ПОЛУЧИТЬ БОЛЕЕ ТОЧНУЮ ИНФОРМАЦИЮ</div>
+                <div class="contacts__text">Мы готовы помочь вам в трудную минуту.</div>
+                <!-- <div class="contacts__tel" >+375 (44) 719 05 99</div> -->
+                <a class="contacts__tel" href="tel:+375447190599">+375 (44) 719 05 99</a>
+                <div class="contacts__map">Минск, пр-т. Партизанский 5</div>
+                <div class="contacts__mail">soboleznuem@info.com</div>
             </div>
             <div class="contacts__img">
                 <div class="contacts__img-box">
@@ -127,6 +128,11 @@
                         <source srcset="img/__contacts/1.webp" type="image/webp">
                         <img src="img/__contacts/1.jpg" alt="my_alt">
                     </picture>
+                    <div class="contacts__time-work">
+                        <div class="contacts__img-title">ЧАСЫ РАБОТЫ</div>
+                        <div class="contacts__img-24">24 ЧАСА</div>
+                        <div class="contacts__img-all">КРУГЛОСУТОЧНО</div>
+                    </div>
                 </div>
             </div>
         </div>
