--- a/loaders.html
+++ b/loaders.html
@@ -19,12 +19,12 @@
                 <h1 class="header__title"><span>Ритуальные услуги в Минске</span></h1>
                 <a href="tel:+375447695139" class="header__tel">тел.+375 44 769 51 39</a>
             </div>
-            <div class="header__burger">
-                <div class="header__button">
-                    <span></span>
-                </div>
-            </div>
             <div class="header__down">
+                <div class="header__burger">
+                    <div class="header__button">
+                        <span></span>
+                    </div>
+                </div>
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__line">
@@ -46,16 +46,16 @@
                                     <a href="copter-graves.html" class="header__link-sub">Копка могилы</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Аренда катафалка</a>
+                                    <a href="rent-catatal.html" class="header__link-sub">Аренда катафалка</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Носильщик гроба</a>
+                                    <a href="loaders.html" class="header__link-sub">Носильщик гроба</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Груз 200</a>
+                                    <a href="cargo-200.html" class="header__link-sub">Груз 200</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Помощь в изготовлении памятников</a>
+                                    <a href="production-of-monuments.html" class="header__link-sub">Помощь в изготовлении памятников</a>
                                 </li>
                             </ul>
                         </li>
@@ -63,36 +63,36 @@
                             <a href="#" class="header__link  _sub">товары</a>
                             <ul class="header__list-sub">
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Гробы</a>
+                                    <a href="shop-coffins.html" class="header__link-sub">Гробы</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Венки ритуальные</a>
+                                    <a href="shop-wreaths.html" class="header__link-sub">Венки ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Корзины ритуальные</a>
+                                    <a href="shop-baskets.html" class="header__link-sub">Корзины ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Кресты</a>
+                                    <a href="shop-crosses.html" class="header__link-sub">Кресты</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Одежда</a>
+                                    <a href="shop-clothes.html" class="header__link-sub">Одежда</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Доставка и оплата</a>
+                                    <a href="shop-payment.html" class="header__link-sub">Доставка и оплата</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">важная информация</a>
+                            <a href="information.html" class="header__link">важная информация</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">морги в минске</a>
+                            <a href="morgues-in-minsk.html" class="header__link">морги в минске</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">отзывы</a>
+                            <a href="reviews.html" class="header__link">отзывы</a>
                         </li>
                         <li class="header__line">
-                            <a href="#" class="header__link">контакты</a>
+                            <a href="contacts.html" class="header__link">контакты</a>
                         </li>
                     </ul> 
                 </nav>
@@ -183,9 +183,6 @@
             </div>
             <div class="tel-contacts__clock">круглосуточно</div>
         </div>
-
-
-
         </main>
         <!--= footer -->
         <footer class="footer">
