--- a/information.html
+++ b/information.html
@@ -157,7 +157,7 @@
                     <div class="info__title">КЛАДБИЩА МИНСКА</div>
                 </a>
                 <!-- блок для инфо -->
-                <a class="info__box" href="#">
+                <a class="info__box" href="burial-allowance.html">
                     <div class="info__img">
                         <picture >
                             <source srcset="img/__information/5.webp" type="image/webp">
@@ -167,7 +167,7 @@
                     <div class="info__title">пособие на погребение</div>
                 </a>
                 <!-- блок для инфо -->
-                <a class="info__box" href="#">
+                <a class="info__box" href="if-died.html">
                     <div class="info__img">
                         <picture >
                             <source srcset="img/__information/6.webp" type="image/webp">
