--- a/shop-coffins.html
+++ b/shop-coffins.html
@@ -305,6 +305,18 @@
                     </div>
                 </div>
             </div>
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">В момент ухода близкого человека хочется только одного — достойно его проводить. А без гроба сделать это невозможно. Он является важным атрибутом традиционных похорон. Именно поэтому к его выбору подходить нужно особенно серьезно. Независимо от бюджета, он должен быть презентабельным и удобным, поэтому прежде, чем выбирать гроб, стоит определиться с его длиной, шириной и дизайном. Длина зависит от роста усопшего, но при этом важно подбирать вариант на 20-25 см больше. Ширина у гроба стандартная. Иногда приходится заказывать изделие нужных габаритов по разным причинам. Происходит это довольно редко, но случается. Форма изделия может быть разной — четырех- или шестигранной формы. Что касается дизайна, то самыми популярными считаются гробы, обитые тканью или полированные. Первые выглядят очень привлекательно. Ткань для обивки может использоваться разная — атлас, бархат, шелк. Цветовая гамма также разнообразная. Стоимость таких гробов невысокая. Полированные изделия стоят дороже за счет отделки. Изготавливают такие гробы из хвои, а для отделки используется ольха, вишня, клен. Внутри изделие обивается тканью из шелка или атласа. Практически на все модели устанавливаются 4 ручки, защелки, которые не дают открыться гробу при транспортировке. Чтобы исключить вероятность запрокидывания головы усопшего гроб оборудуется специальным накатом. Дополнительно может наносится на ткань символика, атрибутика, но это по желанию клиента.</div>
+            </div>
+            <!-- title: -->
+            <div class="text-title container">
+                <div class="text-title_margin">Где купить гроб недорого в Минске?</div>
+            </div>
+            <!-- текст: -->
+            <div class="text-page container">
+                <div class="text-page_margin">У нас всегда в наличии большой выбор гробов по доступной стоимости. Все наши изделия имеют высокое качество и отличный внешний вид. Подобрать его можно как для женщины, так и для мужчины. Чтобы сделать заказ, не обязательно куда-то ехать. Вы можете позвонить нам и получить бесплатную консультацию. Наши специалисты помогут сделать выбор, подберут необходимые товары и атрибуты для красивого захоронения усопшего. Гробы у нас купить можно обитые тканью, полированные, разных размеров и форм. Цена на всю продукцию невысокая. Мы понимаем и без того всю сложность ситуации, поэтому максимально стараемся снизить затраты на погребение, оказываем услуги по захоронению в счет пособия или с отсрочкой платежа. Похороны — сложный этап в жизни каждого. Наша миссия сделать его, несмотря на всю трагичность ситуации, красивым и искренним. Обращаясь к нам, вы можете надеяться на понимание и помощь в решении любых вопросов, касающихся захоронения.</div>
+            </div>
 
 
 <!-- конец блок магазина -->
